--- a/compare.config
+++ b/compare.config
@@ -1,7 +1,7 @@
 [compare]
-models_path = Models/OC-vuq2/untuned.xgmodel,Models/OC-vuq2/tuned_2017_04_25_14_10_31.xgmodel,None
-datasets = Data/OC-vuq2/NN_test2.txt.xgmat,Data/OC-vuq2/NN_test2.txt.xgmat,Data/OC-vuq2/rslt_app2.txt
-dataset_formats = xgboost,xgboost,svm
-model_names = untuned_xgb,tuned_xgb,svm
-thres = 0.5,0.5,0.0
-markers = g-,r-,b-
+model_paths = Models/features/untuned.xgmodel,Models/features/2017_05_23_16_11_22.xgmodel
+datasets = Data/features/test.svmlib,Data/features/test.svmlib
+dataset_formats = xgboost,xgb_pickle
+model_names = untuned_xgb,tuned_xgb
+thres = 0.5,0.5
+markers = g-,r-
