--- a/xg_train_untuned.config
+++ b/xg_train_untuned.config
@@ -20,7 +20,7 @@ objective = binary:logistic
 # Is the training data xg format? [1 Yes, 0 No]
 xgmat = 1
 # The path of training data
-dtrain = Data/OC-vuq2/NN_train.txt.xgmat
+dtrain = Data/features/train.svmlib
 data = Data/NN_train.txt
 label = Data/NNAI_train.txt
 # The path of model to be outputted
