--- a/xg_train.config
+++ b/xg_train.config
@@ -7,7 +7,7 @@ booster = gbtree
 # Do not show the detailed information[1 Yes, 0 NO]
 silent = 1
 #  MultiThread
-nthread = 10
+nthread = 1
 
 # ==========   Tree Booster Parameters   ====================
 # step size shrinkage
@@ -34,8 +34,9 @@ refresh_leaf = 1
 # choose logistic regression loss function for binary classification
 objective = binary:logistic
 base_score = 0.5
-eval_metric = map
-eval_metric_sk = average_precision
+eval_metric = error
+#eval_metric_sk = average_precision
+eval_metric_sk = precision
 seed = 0
 # =============== common Parameters ====================
 # the number of round to do boosting
@@ -45,17 +46,17 @@ save_period = 0
 # The path of training data
 # Is the training data xg format? [1 Yes, 0 No]
 xgmat = 1
-data = Data/NN_train.txt
+data = Data/features/
 label = Data/NNAI_train.txt
-xgdata = Data/NN_train.txt.xgmat
+xgdata = Data/features/train.svmlib
 # eval: show the train error in each round[0 no]
 eval = 1
 cv = 5
-n_jobs = 1
+n_jobs = 4
 
 #===============  parameters need to be tuned =================
-t_num_round = 7
-t_max_depth = 7,11
+t_num_round = 500
+t_max_depth = 8,10,12
 t_subsample = 0.85,0.95
 t_min_child_weight = 0.85,0.95
 t_colsample_bytree = 0.85,0.95
