add the custom evalation functions

--- a/compare.config
+++ b/compare.config
@@ -1,7 +1,7 @@
 [compare]
-model_paths = Models/features/untuned.xgmodel,Models/features/2017_05_23_23_45_32.xgmodel
-datasets = Data/features/test.svmlib,Data/features/test.svmlib
+model_paths = Models/features/2017_05_24_14_47_43.xgmodel,Models/features/2017_05_24_14_47_43.xgmodel
+datasets = Data/features/train.svmlib,Data/features/test.svmlib
 dataset_formats = xgboost,xgboost
-model_names = untuned_xgb,tuned_xgb
+model_names = tuned_xgb_train,tuned_xgb_test
 thres = 0.5,0.5
 markers = g-,r-
