--- a/xg_train_cv.config
+++ b/xg_train_cv.config
@@ -10,7 +10,7 @@ silent = 1
 
 # ==========   Tree Booster Parameters   ====================
 # step size shrinkage
-eta = 1.0
+eta = 0.5
 # minimum loss reduction required to make a further partition
 gamma = 0.2
 # minimum sum of instance weight(hessian) needed in a child
@@ -20,6 +20,10 @@ lambda = 300
 alpha = 0
 sketch_eps = 0.03
 refresh_leaf = 1
+max_depth = 10
+subsample = 1.0
+min_child_weight = 5
+colsample_bytree = 1.0
 
 
 
@@ -28,6 +32,7 @@ refresh_leaf = 1
 objective = binary:logistic
 base_score = 0.5
 seed = 0
+
 # =============== common Parameters ====================
 # 0 means do not save any model except the final round model
 save_period = 0
@@ -37,22 +42,25 @@ xgmat = 1
 data = Data/features/
 label = Data/NNAI_train.txt
 xgdata = Data/features/train.svmlib
-eval_metric = error
-ascend = 0
+eval_metric = precision
+ascend = 1
 # eval: show the train error in each round[0 no]
 eval = 1
 cv = 5
 #  MultiThread
 nthread = 4
-# the number of round to do boosting
-num_round = 500
 
 
+[xg_tune]
 #===============  parameters need to be tuned =================
+# the number of round to do boosting
+num_round = 1000
 # maximum depth of a tree
-max_depth = 14
-subsample = 1.0
-min_child_weight = 1,3,5
-colsample_bytree = 0.8,0.9,1.0
+max_depth = 10,15,20
+# max_depth = 20
+subsample = 0.8,0.9,1.0
+# subsample = 1.0
+min_child_weight = 0.1,1,10
+colsample_bytree = 0.7,0.8,0.9,1.0
 
 
