--- a/xg_train_cv.config
+++ b/xg_train_cv.config
@@ -10,19 +10,19 @@ silent = 1
 
 # ==========   Tree Booster Parameters   ====================
 # step size shrinkage
-eta = 0.5
+eta = 0.3
 # minimum loss reduction required to make a further partition
-gamma = 0.2
+gamma = 0.0
 # minimum sum of instance weight(hessian) needed in a child
 max_delta_step = 0
 colsample_bylevel = 1
-lambda = 300
+lambda = 1
 alpha = 0
 sketch_eps = 0.03
 refresh_leaf = 1
-max_depth = 10
+max_depth = 6
 subsample = 1.0
-min_child_weight = 5
+min_child_weight = 1
 colsample_bytree = 1.0
 
 
@@ -42,8 +42,8 @@ xgmat = 1
 data = Data/features/
 label = Data/NNAI_train.txt
 xgdata = Data/features/train.svmlib
-eval_metric = precision
-ascend = 1
+eval_metric = logloss
+ascend = 0
 # eval: show the train error in each round[0 no]
 eval = 1
 cv = 5
@@ -59,8 +59,10 @@ num_round = 1000
 max_depth = 10,15,20
 # max_depth = 20
 subsample = 0.8,0.9,1.0
-# subsample = 1.0
+# subsample = 0.9
 min_child_weight = 0.1,1,10
-colsample_bytree = 0.7,0.8,0.9,1.0
+# min_child_weight = 0.1
+colsample_bytree = 0.8,0.9,1.0
+#colsample_bytree = 0.7
 
 
