--- a/compare.config
+++ b/compare.config
@@ -1,7 +1,7 @@
 [compare]
-model_paths = Models/features/2017_05_24_16_21_00.xgmodel,Models/features/2017_05_24_16_21_00.xgmodel
-datasets = Data/features/train.svmlib,Data/features/test.svmlib
+model_paths = Models/features/untuned.xgmodel,Models/features/2017_05_24_17_00_51.xgmodel
+datasets = Data/features/test.svmlib,Data/features/test.svmlib
 dataset_formats = xgboost,xgboost
-model_names = tuned_xgb_train,tuned_xgb_test
+model_names = untuned_xgb,tuned_xgb
 thres = 0.5,0.5
 markers = g-,r-
