--- a/xg_train_cv.config
+++ b/xg_train_cv.config
@@ -39,9 +39,9 @@ save_period = 0
 # The path of training data
 # Is the training data xg format? [1 Yes, 0 No]
 xgmat = 1
-data = Data/features/
-label = Data/NNAI_train.txt
-xgdata = Data/features/train.svmlib
+data = Data/OC-vuq1/NN_train.txt
+label = Data/OC-vuq1/NNAI_train.txt
+xgdata = Data/OC-vuq1/NN_train.txt.xgmat
 eval_metric = logloss
 ascend = 0
 # eval: show the train error in each round[0 no]
@@ -54,15 +54,15 @@ nthread = 4
 [xg_tune]
 #===============  parameters need to be tuned =================
 # the number of round to do boosting
-num_round = 1000
+num_round = 500
 # maximum depth of a tree
-max_depth = 6,8,10,15
+max_depth = 4,5,6
 # max_depth = 8
-subsample = 0.8,0.9,1.0
+subsample = 0.7,0.8,0.9,1.0
 #subsample = 1.0
-min_child_weight = 0.8,1,3
+min_child_weight = 0.3,0.8,1,3
 # min_child_weight = 0.1
-colsample_bytree = 0.8,0.8,1.0
+colsample_bytree = 0.7,0.8,0.9,1.0
 #colsample_bytree = 0.7
 
 
