--- a/compare.config
+++ b/compare.config
@@ -1,6 +1,6 @@
 [compare]
-model_paths = Models/features/untuned.xgmodel,Models/features/2017_05_24_17_00_51.xgmodel
-datasets = Data/features/test.svmlib,Data/features/test.svmlib
+model_paths = Models/OC-vuq1/untuned.xgmodel,Models/OC-vuq1/2017_05_25_12_52_34.xgmodel
+datasets = Data/OC-vuq1/NN_test.txt.libsvm,Data/OC-vuq1/NN_test.txt.libsvm
 dataset_formats = xgboost,xgboost
 model_names = untuned_xgb,tuned_xgb
 thres = 0.5,0.5
