--- a/compare.config
+++ b/compare.config
@@ -1,6 +1,7 @@
 [compare]
 model_paths = Models/OC-vuq1/2017_05_25_12_52_34.xgmodel,Models/OC-vuq2/2017_05_25_22_24_20.xgmodel,Models/OC-vuq3/2017_05_25_18_38_09.xgmodel
 datasets = Data/OC-vuq1/NN_test.txt.libsvm,Data/OC-vuq2/NN_test.txt.libsvm,Data/OC-vuq3/NN_test.txt.libsvm
+labels = Data/OC-vuq1/NNAI_test.txt,Data/OC-vuq2/NNAI_test.txt,Data/OC-vuq3/NNAI_test.txt
 dataset_formats = xgboost,xgboost,xgboost
 model_names = OC-vuq1,OC-vuq2,OC-vuq3
 thres = 0.5,0.5,0.5
